# linear_regression_model

summative/: pyproject.toml  requirements.txt
summative/API/: best_model.joblib  prediction.py  preprocessor.joblib
summative/FlutterApp/: README.md  pubspec.yaml
summative/FlutterApp/.dart_tool/: package_config.json  package_graph.json
summative/FlutterApp/android/: local.properties
summative/FlutterApp/android/app/: build.gradle.kts
summative/FlutterApp/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
summative/FlutterApp/ios/Runner/: Info.plist
summative/FlutterApp/ios/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/lib/: main.dart
summative/FlutterApp/lib/models/: prediction_request.dart  prediction_response.dart
summative/FlutterApp/lib/screens/: prediction_screen.dart
summative/FlutterApp/lib/services/: prediction_service.dart
summative/FlutterApp/lib/widgets/: loading_widget.dart  prediction_card.dart
summative/FlutterApp/linux/: CMakeLists.txt
summative/FlutterApp/linux/runner/: my_application.cc
summative/FlutterApp/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
summative/FlutterApp/macos/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/test/: widget_test.dart
summative/FlutterApp/web/: index.html  manifest.json
summative/FlutterApp/windows/: CMakeLists.txt
summative/FlutterApp/windows/runner/: Runner.rc  main.cpp
summative/linear_regression/: multivariate.ipynb
summative/linear_regression/data/: pisa2009train.csv
(+4 files in other folders)
