[project]
name = "summative"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
]
